set(CMAKE_INCLUDE_CURRENT_DIR ON)

project(aggregation)

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

file(GLOB LIB_SOURCES *.cpp)
file(GLOB LIB_HEADERS *.h)

list(APPEND LIB_SOURCES
        ${LIB_HEADERS}
        ${LIB_FORMS_HEADERS}
        ${LIB_RESOURCES_HEADERS}
)

set(TARGET_LIBRARIES
    Qt5::Core
)

add_library(${PROJECT_NAME} STATIC ${LIB_SOURCES})

target_link_libraries(${PROJECT_NAME} ${TARGET_LIBRARIES})

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${G_PROJECT_LIBRARY_VERSION} SOVERSION ${G_PROJECT_LIBRARY_SOVERSION})

get_filename_component(PARENT_DIR ${PROJECT_SOURCE_DIR} DIRECTORY)
set(${PROJECT_NAME}_INCLUDE_DIRS ${PARENT_DIR} CACHE INTERNAL "${PROJECT_NAME}_include" FORCE)
set(${PROJECT_NAME}_LIBRARIES ${PROJECT_NAME} CACHE INTERNAL "${PROJECT_NAME}_library" FORCE)

install(TARGETS ${PROJECT_NAME}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
