set(CMAKE_INCLUDE_CURRENT_DIR ON)

project(helptool)

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

file(GLOB LIB_${PROJECT_NAME}_SOURCES *.cpp)
file(GLOB LIB_${PROJECT_NAME}_HEADERS *.h)
file(GLOB LIB_${PROJECT_NAME}_FORMS *.ui)
file(GLOB LIB_${PROJECT_NAME}_RESOURCES *.qrc)

qt5_wrap_ui(LIB_${PROJECT_NAME}_FORMS_HEADERS ${LIB_${PROJECT_NAME}_FORMS})
qt5_add_resources(LIB_${PROJECT_NAME}_RESOURCES_HEADERS ${LIB_${PROJECT_NAME}_RESOURCES})

list(APPEND LIB_${PROJECT_NAME}_SOURCES
        ${LIB_${PROJECT_NAME}_HEADERS}
        ${LIB_${PROJECT_NAME}_FORMS_HEADERS}
        ${LIB_${PROJECT_NAME}_RESOURCES_HEADERS}
)

include_directories()

list(APPEND ${PROJECT_NAME}_TARGET_LIBRARIES
    Qt5::Widgets
    Qt5::Core
)

add_library(${PROJECT_NAME} SHARED ${LIB_${PROJECT_NAME}_SOURCES})
add_library(${PROJECT_NAME}_static STATIC ${LIB_${PROJECT_NAME}_SOURCES})

target_link_libraries(${PROJECT_NAME} ${${PROJECT_NAME}_TARGET_LIBRARIES})
target_link_libraries(${PROJECT_NAME}_static ${${PROJECT_NAME}_TARGET_LIBRARIES})

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${G_PROJECT_LIBRARY_VERSION} SOVERSION ${G_PROJECT_LIBRARY_SOVERSION})
set_target_properties(${PROJECT_NAME} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
set_target_properties(${PROJECT_NAME}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
set_target_properties(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME "${PROJECT_NAME}")

get_filename_component(PARENT_DIR ${PROJECT_SOURCE_DIR} DIRECTORY)
set(${PROJECT_NAME}_INCLUDE_DIRS ${PARENT_DIR} CACHE INTERNAL "${PROJECT_NAME}_include" FORCE)
set(${PROJECT_NAME}_LIBRARIES ${PROJECT_NAME} CACHE INTERNAL "${PROJECT_NAME}_library" FORCE)
set(${PROJECT_NAME}_STATIC_LIBRARIES ${PROJECT_NAME}_static CACHE INTERNAL "${PROJECT_NAME}_static_library" FORCE)

install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_static
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
