set(CMAKE_INCLUDE_CURRENT_DIR ON)

project(qtlockedfile)

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(LIB_${PROJECT_NAME}_SOURCES qtlockedfile.cpp)
if(WIN32)
   list(APPEND LIB_${PROJECT_NAME}_SOURCES qtlockedfile_win.cpp)
else()
   list(APPEND LIB_${PROJECT_NAME}_SOURCES qtlockedfile_unix.cpp)
endif()

list(APPEND ${PROJECT_NAME}_TARGET_LIBRARIES
    Qt5::Core
)

add_library(${PROJECT_NAME} STATIC ${LIB_${PROJECT_NAME}_SOURCES})

target_link_libraries(${PROJECT_NAME} ${${PROJECT_NAME}_TARGET_LIBRARIES})

set(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR} CACHE INTERNAL "${PROJECT_NAME}_include" FORCE)
set(${PROJECT_NAME}_LIBRARIES ${PROJECT_NAME} CACHE INTERNAL "${PROJECT_NAME}_library" FORCE)

install(TARGETS ${PROJECT_NAME}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
